Line wrapping fix
I fixed the line wrap issue. This will only work until we make the panel resizable.

--- a/src/style.css
+++ b/src/style.css
@@ -198,3 +198,11 @@ body {
 .themes {
   color: rgb(37, 37, 38);
 }
+
+.name {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 130px;
+
+}
